--- a/src/App.css
+++ b/src/App.css
@@ -6,11 +6,23 @@
 body {
   background: hsla(192, 96%, 50%, 1);
 
-background: linear-gradient(90deg, hsla(192, 96%, 50%, 1) 0%, hsla(65, 92%, 54%, 1) 100%);
+  background: linear-gradient(
+    90deg,
+    hsla(192, 96%, 50%, 1) 0%,
+    hsla(65, 92%, 54%, 1) 100%
+  );
 
-background: -moz-linear-gradient(90deg, hsla(192, 96%, 50%, 1) 0%, hsla(65, 92%, 54%, 1) 100%);
+  background: -moz-linear-gradient(
+    90deg,
+    hsla(192, 96%, 50%, 1) 0%,
+    hsla(65, 92%, 54%, 1) 100%
+  );
 
-background: -webkit-linear-gradient(90deg, hsla(192, 96%, 50%, 1) 0%, hsla(65, 92%, 54%, 1) 100%);
+  background: -webkit-linear-gradient(
+    90deg,
+    hsla(192, 96%, 50%, 1) 0%,
+    hsla(65, 92%, 54%, 1) 100%
+  );
 
-filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#05C9F9", endColorstr="#E5F61B", GradientType=1 );
+  filter: progid: DXImageTransform.Microsoft.gradient( startColorstr="#05C9F9", endColorstr="#E5F61B", GradientType=1 );
 }
